[tool.poetry]
name = "clockify-api"
version = "0.2.0"
description = "Python wrapper for Clockify's API."
authors = ["Jean-Paul Weijers <jpweijers@users.noreply.github.com>"]
packages = [
  {include = "clockify"}
]
repository="https://github.com/jpweijers/clockify-api"
readme="README.md"
documentation="https://clockify-api.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
bidict = "^0.23.1"
requests = "^2.32.3"
marshmallow = "^3.23.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pytest = "^8.3.3"
json2python-models = "^0.3.1"
coverage = "^7.6.4"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
